--- a/assets/css/_gallery.scss
+++ b/assets/css/_gallery.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
   left: 110px;
   width: calc(50% - 18.5px);/* Deux colonnes avec un espace entre */
   aspect-ratio: 1/1;
