--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,10 +30,16 @@ header {
 .menu {
     display: flex;
     margin-left: 850px;
+    top: 0px;
 
     li {
         list-style: none;
     }
+}
+
+.menu-item-91 {
+    position: relative;
+    left: 70px;
 }
 
 .logo {
@@ -237,6 +243,7 @@ a {
 
     @media screen and (min-width: 320px) and (max-width: 768px) {    
         .container {
+            position: relative;
             right: -180px;
         }
     }
@@ -259,6 +266,11 @@ footer {
     left: 60px;
 }
 
+ul {
+    position: relative;
+    bottom: 20px;
+}
+
 li.page_item.page-item-87 {
     position: relative;
     top: 10px;
@@ -277,6 +289,13 @@ li.page_item.page-item-97 {
     left: 710px;
 }
 
+.separateur-3 {
+    border-bottom: 1px solid #000;
+    display: inline-block;
+    width: 82em;
+    margin-left: 0px;
+    padding-bottom: 70px;
+}
 
 /* styles.css popup */
 .popup-contact {
@@ -313,7 +332,9 @@ li.page_item.page-item-97 {
 }
 
 #ouvrirPopupContact {
+    position: relative;
     margin-left: 1150px;
+    top: 20px;
 }
 
 ul {
@@ -438,7 +459,10 @@ h1 {
 }
 
 /*bouton contact single-photo*/
-.button {
+.favorite.styled {
+    position: relative;
+    right: 700px;
+    top: 38px;
     background-color: #D8D8D8;
     border: transparent;
     border-radius: 2px;
@@ -453,7 +477,6 @@ h1 {
     align-items: center;
     width: 272px;
     height: 50px;
-    left: 280px;
     transition: background-color 0.5s ease-in-out;
 }
 
@@ -523,13 +546,13 @@ h3:hover {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    top: 90px;
+    top: 120px;
 }
   
 .img-container {
     position: relative;
     display: flex;
-    top: 90px;
+    top: 120px;
 }
 
 .previous-img, .next-img {
@@ -554,7 +577,7 @@ h3:hover {
 
 h2 {
     position: relative;
-    left: 30px;
+    left: 100px;
 }
 
 .images-sin {
@@ -678,6 +701,10 @@ h3:hover {
 }
 
 /*Filtres page accueil*/
+.filters {
+    position: relative;
+    left: 60px;
+}
 
 #filter-category.filter-category {
     position: relative;
@@ -700,7 +727,7 @@ h3:hover {
 
 #filter-sort.filter-sort {
     position: relative;
-    left: 930px;
+    left: 950px;
     bottom: 40px;
     width: 240px;
     height: 42px;
@@ -891,12 +918,4 @@ h3:hover {
     color: white;
     font-size: 24px;
     text-decoration: none; 
-}
-
-.separateur-3 {
-    border-bottom: 1px solid #000;
-    display: inline-block;
-    width: 82em;
-    margin-left: 0px;
-    padding-bottom: 30px;
 }
