--- a/assets/css/_gallery.scss
+++ b/assets/css/_gallery.scss
@@ -1,9 +1,8 @@
 .gallery {
-  position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
-  left: 110px;
+  margin-left: 110px;
   width: calc(50% - 18.5px);/* Deux colonnes avec un espace entre */
   aspect-ratio: 1/1;
 }
@@ -89,5 +88,12 @@
     .gallery {
       grid-template-columns: 1fr; /* Une seule colonne de photos */
       width: 100%; /* Occupe toute la largeur disponible */
+      margin-top: 100px;
+      margin-left: 0px;
     }
+
+    .gallery-item img {
+      width: 80%;
+    }
+
   }
