--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Abel&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&family=Space+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&display=swap");
 .gallery {
-  position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
-  left: 110px;
+  margin-left: 110px;
   width: calc(50% - 18.5px); /* Deux colonnes avec un espace entre */
   aspect-ratio: 1/1;
 }
@@ -88,6 +87,11 @@
   .gallery {
     grid-template-columns: 1fr; /* Une seule colonne de photos */
     width: 100%; /* Occupe toute la largeur disponible */
+    margin-top: 100px;
+    margin-left: 0px;
+  }
+  .gallery-item img {
+    width: 80%;
   }
 }
 /*********/
@@ -104,6 +108,11 @@ body {
   overflow-x: hidden;
 }
 
+@media (max-width: 758px) {
+  body {
+    margin: 0 auto;
+  }
+}
 /*header*/
 header {
   position: relative;
@@ -181,7 +190,7 @@ a {
   width: 100%;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .navbar {
     display: none;
   }
@@ -314,24 +323,18 @@ a {
   .container {
     display: block;
   }
+  /* Styles pour afficher le menu de navigation (sous forme de liste, par exemple) */
+  .nav {
+    display: block;
+  }
 }
-/* Styles pour afficher le menu de navigation (sous forme de liste, par exemple) */
-.nav {
-  display: block;
-}
-
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 320px) and (max-width: 768px) {
   .container {
     position: relative;
-    right: -180px;
+    left: 600px;
   }
 }
 /*footer*/
-footer {
-  position: relative;
-  height: 40px;
-}
-
 footer {
   position: relative;
   height: 40px;
@@ -375,6 +378,12 @@ li.page_item.page-item-97 {
   padding-bottom: 70px;
 }
 
+@media (max-width: 758px) {
+  ul {
+    position: relative;
+    right: 300px;
+  }
+}
 /* styles.css popup */
 .popup-contact {
   display: none;
@@ -773,10 +782,17 @@ h3:hover {
   padding: 8px 15px 8px 15px;
 }
 
+@media (max-width: 758px) {
+  .button-all {
+    position: relative;
+    bottom: 0px;
+    left: 150px;
+  }
+}
 /*Filtres page accueil*/
 .filters {
-  position: relative;
-  left: 60px;
+  margin-top: 30px;
+  margin-left: 60px;
 }
 
 #filter-category.filter-category {
@@ -808,13 +824,37 @@ h3:hover {
   border-radius: 8px;
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   .filters {
-    position: relative;
-    top: 30px;
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr;
+    margin-left: 60px;
+  }
+  #filter-format.filter-format {
+    margin-top: 100px;
+    margin-left: -270px;
   }
   #filter-sort.filter-sort {
-    left: 600px;
+    left: 60px;
+    top: 60px;
+  }
+}
+@media only screen and (min-width: 480px) and (max-width: 768px) {
+  .filters {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr;
+    margin-top: 30px;
+    margin-left: 100px;
+  }
+  #filter-format.filter-format {
+    margin-top: 100px;
+    margin-left: -270px;
+  }
+  #filter-sort.filter-sort {
+    left: 60px;
+    top: 60px;
   }
 }
 /*bouton page d'accueil*/
