--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,6 @@ html {
     margin: 0 auto;
 }
 
-
 body {
     max-width: 100%;
     width: 100%;
@@ -19,6 +18,11 @@ body {
     overflow-x: hidden;
 }
 
+@media (max-width: 758px) {
+    body {
+        margin: 0 auto;
+    }
+}
 
 /*header*/
 
@@ -98,7 +102,7 @@ a {
     max-width: 1400px;
     width: 100%;
   }
-  @media (min-width: 768px) {
+  @media (max-width: 768px) {
     .navbar {
       display: none; 
     }
@@ -230,11 +234,10 @@ a {
         display: none;
     }
 
-    /* Styles pour afficher le menu burger */
-    .container {
-        display: block;
-    }
-}
+   /* Styles pour afficher le menu burger */
+   .container {
+    display: block;
+   }
 
     /* Styles pour afficher le menu de navigation (sous forme de liste, par exemple) */
     .nav {
@@ -244,16 +247,11 @@ a {
     @media screen and (min-width: 320px) and (max-width: 768px) {    
         .container {
             position: relative;
-            right: -180px;
+            left: 600px;
         }
     }
-
-/*footer*/
-
-footer {
-    position: relative;
-    height: 40px;
 }
+/*footer*/
 
 footer {
     position: relative;
@@ -296,6 +294,13 @@ li.page_item.page-item-97 {
     margin-left: 0px;
     padding-bottom: 70px;
 }
+
+@media (max-width: 758px) {
+    ul {
+      position: relative;
+      right: 300px;
+    }
+  }
 
 /* styles.css popup */
 .popup-contact {
@@ -700,10 +705,18 @@ h3:hover {
     padding: 8px 15px 8px 15px;
 }
 
+@media (max-width: 758px) {
+    .button-all {
+      position: relative;
+      bottom :0px;
+      left: 150px;
+    }
+  }
+
 /*Filtres page accueil*/
 .filters {
-    position: relative;
-    left: 60px;
+    margin-top: 30px;
+    margin-left: 60px;
 }
 
 #filter-category.filter-category {
@@ -735,14 +748,40 @@ h3:hover {
     border-radius: 8px;
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
     .filters {
-      position: relative;
-      top: 30px;
+        display: grid;
+        width: 100%;
+        grid-template-columns: 1fr;
+        margin-left: 60px;
     }
+    #filter-format.filter-format {
+        margin-top: 100px;
+        margin-left: -270px;
+    } 
 
     #filter-sort.filter-sort {
-        left: 600px;
+        left: 60px;
+        top: 60px;
+    }   
+}
+    @media only screen and (min-width: 480px) and (max-width: 768px) {
+    .filters {
+        display: grid;
+        width: 100%;
+        grid-template-columns: 1fr;
+        margin-top: 30px;
+        margin-left: 100px;
+    }
+    
+    #filter-format.filter-format {
+        margin-top: 100px;
+        margin-left: -270px;
+    } 
+
+    #filter-sort.filter-sort {
+        left: 60px;
+        top: 60px;
   }
 }
 
